// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conversion content should render conversion content 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 {
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-size: 1rem;
}

.emotion-2 {
  font-weight: 600;
}

.emotion-3 {
  overflow: auto;
}

<body>
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          <span
            class="emotion-2"
          >
            ConversionId
          </span>
          : 
          17
        </div>
        <div
          class="emotion-3"
        >
          <h3>
            operation.log
          </h3>
          <div
            class="react-json-view"
            style="font-family: monospace; cursor: default; background-color: rgba(0, 0, 0, 0); position: relative;"
          >
            <div
              class="pretty-json-container object-container"
            >
              <div
                class="object-content"
              >
                <div
                  class="object-key-val"
                >
                  <span>
                    <span
                      style="display: inline-block; cursor: pointer;"
                    >
                      <div
                        class="icon-container"
                        style="display: inline-block; width: 17px;"
                      >
                        <span
                          class="expanded-icon"
                        >
                          <svg
                            fill="#586e75"
                            height="1em"
                            style="vertical-align: middle; color: rgb(88, 110, 117); height: 1em; width: 1em;"
                            viewBox="0 0 1792 1792"
                            width="1em"
                          >
                            <path
                              d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                            />
                          </svg>
                        </span>
                      </div>
                      <span />
                      <span
                        style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
                      >
                        {
                      </span>
                    </span>
                    <div
                      class="object-meta-data"
                      style="display: inline-block; padding: 0px 0px 0px 10px;"
                    />
                  </span>
                  <div
                    class="pushed-content object-container"
                  >
                    <div
                      class="object-content"
                      style="margin-left: 6px;"
                    >
                      <div
                        class="variable-row"
                        style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 10px;"
                      >
                        <span>
                          <span
                            class="object-key"
                            style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                          >
                            <span
                              style="vertical-align: top;"
                            >
                              "
                            </span>
                            <span
                              style="display: inline-block;"
                            >
                              foo
                            </span>
                            <span
                              style="vertical-align: top;"
                            >
                              "
                            </span>
                          </span>
                          <span
                            style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                          >
                            :
                          </span>
                        </span>
                        <div
                          class="variable-value"
                          style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                        >
                          <div
                            style="display: inline-block; color: rgb(203, 75, 22);"
                          >
                            <span
                              class="string-value"
                              style="cursor: default;"
                            >
                              "
                              bar
                              "
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="variable-row"
                        style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 10px;"
                      >
                        <span>
                          <span
                            class="object-key"
                            style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                          >
                            <span
                              style="vertical-align: top;"
                            >
                              "
                            </span>
                            <span
                              style="display: inline-block;"
                            >
                              baz
                            </span>
                            <span
                              style="vertical-align: top;"
                            >
                              "
                            </span>
                          </span>
                          <span
                            style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                          >
                            :
                          </span>
                        </span>
                        <div
                          class="variable-value"
                          style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                        >
                          <div
                            style="display: inline-block; color: rgb(203, 75, 22);"
                          >
                            <span
                              class="string-value"
                              style="cursor: default;"
                            >
                              "
                              blee blue blah blueberry dee
                              "
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <span
                    class="brace-row"
                  >
                    <span
                      style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 3px;"
                    >
                      }
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-1 {
  margin-top: 1rem;
  margin-bottom: 1rem;
  font-size: 1rem;
}

.emotion-2 {
  font-weight: 600;
}

.emotion-3 {
  overflow: auto;
}

<div>
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <span
          class="emotion-2"
        >
          ConversionId
        </span>
        : 
        17
      </div>
      <div
        class="emotion-3"
      >
        <h3>
          operation.log
        </h3>
        <div
          class="react-json-view"
          style="font-family: monospace; cursor: default; background-color: rgba(0, 0, 0, 0); position: relative;"
        >
          <div
            class="pretty-json-container object-container"
          >
            <div
              class="object-content"
            >
              <div
                class="object-key-val"
              >
                <span>
                  <span
                    style="display: inline-block; cursor: pointer;"
                  >
                    <div
                      class="icon-container"
                      style="display: inline-block; width: 17px;"
                    >
                      <span
                        class="expanded-icon"
                      >
                        <svg
                          fill="#586e75"
                          height="1em"
                          style="vertical-align: middle; color: rgb(88, 110, 117); height: 1em; width: 1em;"
                          viewBox="0 0 1792 1792"
                          width="1em"
                        >
                          <path
                            d="M1344 800v64q0 14-9 23t-23 9h-832q-14 0-23-9t-9-23v-64q0-14 9-23t23-9h832q14 0 23 9t9 23zm128 448v-832q0-66-47-113t-113-47h-832q-66 0-113 47t-47 113v832q0 66 47 113t113 47h832q66 0 113-47t47-113zm128-832v832q0 119-84.5 203.5t-203.5 84.5h-832q-119 0-203.5-84.5t-84.5-203.5v-832q0-119 84.5-203.5t203.5-84.5h832q119 0 203.5 84.5t84.5 203.5z"
                          />
                        </svg>
                      </span>
                    </div>
                    <span />
                    <span
                      style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54);"
                    >
                      {
                    </span>
                  </span>
                  <div
                    class="object-meta-data"
                    style="display: inline-block; padding: 0px 0px 0px 10px;"
                  />
                </span>
                <div
                  class="pushed-content object-container"
                >
                  <div
                    class="object-content"
                    style="margin-left: 6px;"
                  >
                    <div
                      class="variable-row"
                      style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 10px;"
                    >
                      <span>
                        <span
                          class="object-key"
                          style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                        >
                          <span
                            style="vertical-align: top;"
                          >
                            "
                          </span>
                          <span
                            style="display: inline-block;"
                          >
                            foo
                          </span>
                          <span
                            style="vertical-align: top;"
                          >
                            "
                          </span>
                        </span>
                        <span
                          style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                        >
                          :
                        </span>
                      </span>
                      <div
                        class="variable-value"
                        style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                      >
                        <div
                          style="display: inline-block; color: rgb(203, 75, 22);"
                        >
                          <span
                            class="string-value"
                            style="cursor: default;"
                          >
                            "
                            bar
                            "
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="variable-row"
                      style="border-left: 1px solid rgb(235, 235, 235); padding: 3px 5px 3px 10px;"
                    >
                      <span>
                        <span
                          class="object-key"
                          style="display: inline-block; color: rgb(0, 43, 54); letter-spacing: 0.5px; font-style: none; vertical-align: top; opacity: 0.85;"
                        >
                          <span
                            style="vertical-align: top;"
                          >
                            "
                          </span>
                          <span
                            style="display: inline-block;"
                          >
                            baz
                          </span>
                          <span
                            style="vertical-align: top;"
                          >
                            "
                          </span>
                        </span>
                        <span
                          style="display: inline-block; margin: 0px 5px; color: rgb(0, 43, 54); vertical-align: top;"
                        >
                          :
                        </span>
                      </span>
                      <div
                        class="variable-value"
                        style="display: inline-block; padding-right: 6px; position: relative; cursor: default;"
                      >
                        <div
                          style="display: inline-block; color: rgb(203, 75, 22);"
                        >
                          <span
                            class="string-value"
                            style="cursor: default;"
                          >
                            "
                            blee blue blah blueberry dee
                            "
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <span
                  class="brace-row"
                >
                  <span
                    style="display: inline-block; cursor: pointer; font-weight: bold; color: rgb(0, 43, 54); padding-left: 3px;"
                  >
                    }
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`conversion content should render nothing by default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
